# Video-notes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/video_notes/: __init__.py  app.py  cli.py
src/video_notes/agents/: __init__.py  ai_client.py  chunk_combiner.py  chunk_sizing.py  chunk_summarizer.py  filename_generator.py  final_markdown.py
src/video_notes/models/: __init__.py  processing.py  text.py  video.py
src/video_notes/services/: README.md  __init__.py  ollama.py  prompt_builder.py  video.py  workflow.py
src/video_notes/utils/: __init__.py  file_manager.py
